# wazeos

./: .gitmodules  AGENTS.md  BUG_FIX_SUMMARY.md  Makefile  README.md  go.mod  go.sum  go.work.sum
cmd/wazeos/: root.go  server.go  version.go
core/kernel/: drivers.go
core/sdk/: README.md
core/sdk/rust/app/: Cargo.toml
core/sdk/rust/app/src/: lib.rs
docs/: CLAUDE_DESKTOP.md  LANGUAGE_SUPPORT.md  PACKAGE_FORMAT.md  PACKAGING_GUIDE.md  PRD.md  README.md  RFCs.md  STRUCTURE.md  pattern-matching.md
docs/archive/: FINAL_STATUS.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IO_IMPLEMENTATION_COMPLETE.md  VERSION_MIGRATION.md
examples/: sdk_io_example.go
internal/: integration_test.go
internal/api/: management.go  management_test.go
internal/bus/: bus.go
internal/conversion/: arguments.go
internal/kernel/: driver_policy.go  driver_policy_test.go  kernel.go  kernel_test.go  resource_bus.go  resource_bus_test.go
internal/runtime/: wazero.go
internal/security/: authz_injection.go
internal/types/: driver_policy.go  errors.go  errors_test.go  iobus.go  ipc.go  permissions.go  result_helpers.go  types.go  types_test.go
internal/validation/: schema.go
sdk/: README.md  STDIO_VS_POINTERS.md
sdk/app/: ERROR_EXAMPLES.md  ERROR_HANDLING_IMPROVEMENT.md  README.md  app.go  context.go  errors.go  io.go  log.go  metadata.go  response.go  testing.go
sdk/rust/wazeos-app/: Cargo.toml  README.md
sdk/rust/wazeos-app/src/: lib.rs
tests/: COMPREHENSIVE_TEST_SUMMARY.md  README.md  TEST_PLAN.md  test_direct.go  test_io_capabilities.sh
(+137 files in other folders)
