[package]
name = "wazeos-app"
version = "0.1.0"
edition = "2021"
authors = ["WazeOS Contributors"]
description = "SDK for building WazeOS MCP tools in Rust"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[lib]
path = "src/lib.rs"
